// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assemblePrescriptionItems — golden master > concurrent_hybrid: week 0, dynamic picker 1`] = `
[
  {
    "intensityLabel": "31% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 31,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "39% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 39,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "47% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 47,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "72% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 72,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityCue": "As many clean reps as possible — stop ~1 in reserve, not to failure.",
    "intensityLabel": "78% TM",
    "isAmrap": true,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 78,
    "reps": 5,
    "sets": 1,
  },
  {
    "distanceM": {
      "max": 35,
      "min": 25,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 30,
      "min": 30,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 13,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 13,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 13,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Pick a weight you can finish cleanly. 2–3 in the tank on the last set.",
    "intensityLabel": "functional",
    "kind": "accessory",
    "movementId": "sl1",
    "movementName": "bulgarian-split-squat",
    "movementSlug": "bulgarian-split-squat",
    "notes": "Single-leg work to even out left-to-right strength and sharpen the balance two-leg lifts skip.",
    "reps": 10,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Clean reps. Leave 1–2 in the tank.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "bi1",
    "movementName": "db-curl",
    "movementSlug": "db-curl",
    "notes": "Adds direct biceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > endurance_anchor: non-strength (cardio) day returns buildPrescription items unchanged 1`] = `
[
  {
    "durationMin": 60,
    "hrCap": "≤ 70% HRR, conversational",
    "intensityLabel": "Easy Z2",
    "kind": "cardio_z2",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "protocolNote": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > hypertrophy_anchor: week 0, declared beginner (onboarding ramp compresses accessory volume) 1`] = `
[
  {
    "intensityLabel": "28% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 28,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "35% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 35,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "42% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 42,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "60% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 60,
    "reps": 12,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 12,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "70% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 70,
    "reps": 10,
    "sets": 1,
  },
  {
    "intensityCue": "Last set: take it close to failure — leave about 2 reps in reserve.",
    "intensityLabel": "70% TM",
    "isAmrap": false,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 70,
    "reps": 12,
    "sets": 1,
    "targetRir": {
      "max": 2,
      "min": 2,
    },
  },
  {
    "distanceM": {
      "max": 40,
      "min": 30,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 60,
      "min": 30,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 12,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 12,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 12,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > hypertrophy_anchor: week 0, dynamic picker (effort-anchored final set) 1`] = `
[
  {
    "intensityLabel": "28% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 28,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "35% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 35,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "42% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 42,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "60% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 60,
    "reps": 12,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 12,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "70% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 70,
    "reps": 10,
    "sets": 1,
  },
  {
    "intensityCue": "Last set: take it close to failure — leave about 2 reps in reserve.",
    "intensityLabel": "70% TM",
    "isAmrap": false,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 70,
    "reps": 12,
    "sets": 1,
    "targetRir": {
      "max": 2,
      "min": 2,
    },
  },
  {
    "distanceM": {
      "max": 40,
      "min": 30,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 60,
      "min": 30,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 12,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 12,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 12,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Last set to failure. Drop weight if form breaks.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "bi1",
    "movementName": "db-curl",
    "movementSlug": "db-curl",
    "notes": "Adds direct biceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 3,
    "targetRir": {
      "max": 2,
      "min": 1,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Last set to failure. Drop weight if form breaks.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "lr1",
    "movementName": "db-lateral-raise",
    "movementSlug": "db-lateral-raise",
    "notes": "Adds direct side delts volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 3,
    "targetRir": {
      "max": 2,
      "min": 1,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Last set to failure. Drop weight if form breaks.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "tri1",
    "movementName": "rope-pushdown",
    "movementSlug": "rope-pushdown",
    "notes": "Adds direct triceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 3,
    "targetRir": {
      "max": 2,
      "min": 1,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "hsr2",
    "movementName": "tempo-calf",
    "movementSlug": "tempo-calf",
    "notes": "Adds direct calves volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 12,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > hypertrophy_anchor: week 1, folded dual-main-lift secondary 1`] = `
[
  {
    "intensityLabel": "30% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 30,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "37.5% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 37.5,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "45% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 45,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "60% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 60,
    "reps": 12,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 12,
    "sets": 1,
  },
  {
    "intensityCue": "Build set — make it challenging; stop several reps short of failure.",
    "intensityLabel": "70% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 70,
    "reps": 10,
    "sets": 1,
  },
  {
    "intensityCue": "Last set: take it close to failure — leave about 2 reps in reserve.",
    "intensityLabel": "75% TM",
    "isAmrap": false,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 75,
    "reps": 10,
    "sets": 1,
    "targetRir": {
      "max": 2,
      "min": 2,
    },
  },
  {
    "intensityLabel": "30% TM",
    "kind": "warmup",
    "movementId": "mv-secondary",
    "movementName": "Overhead Press",
    "movementSlug": "overhead-press",
    "percentTm": 30,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "37.5% TM",
    "kind": "warmup",
    "movementId": "mv-secondary",
    "movementName": "Overhead Press",
    "movementSlug": "overhead-press",
    "percentTm": 37.5,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "45% TM",
    "kind": "warmup",
    "movementId": "mv-secondary",
    "movementName": "Overhead Press",
    "movementSlug": "overhead-press",
    "percentTm": 45,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "60% TM",
    "kind": "main",
    "movementId": "mv-secondary",
    "movementName": "Overhead Press",
    "movementSlug": "overhead-press",
    "notes": undefined,
    "percentTm": 60,
    "reps": 10,
    "sets": 1,
  },
  {
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-secondary",
    "movementName": "Overhead Press",
    "movementSlug": "overhead-press",
    "notes": undefined,
    "percentTm": 65,
    "reps": 10,
    "sets": 1,
  },
  {
    "intensityLabel": "70% TM",
    "kind": "main",
    "movementId": "mv-secondary",
    "movementName": "Overhead Press",
    "movementSlug": "overhead-press",
    "notes": undefined,
    "percentTm": 70,
    "reps": 8,
    "sets": 1,
  },
  {
    "intensityLabel": "75% TM",
    "kind": "main",
    "movementId": "mv-secondary",
    "movementName": "Overhead Press",
    "movementSlug": "overhead-press",
    "notes": "top set",
    "percentTm": 75,
    "reps": 8,
    "sets": 1,
  },
  {
    "distanceM": {
      "max": 50,
      "min": 40,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 60,
      "min": 30,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 12,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 12,
    "sets": 3,
    "targetRir": {
      "max": 2,
      "min": 2,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 12,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Last set to failure. Drop weight if form breaks.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "bi1",
    "movementName": "db-curl",
    "movementSlug": "db-curl",
    "notes": "Adds direct biceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 3,
    "targetRir": {
      "max": 1,
      "min": 0,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Last set to failure. Drop weight if form breaks.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "lr1",
    "movementName": "db-lateral-raise",
    "movementSlug": "db-lateral-raise",
    "notes": "Adds direct side delts volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 3,
    "targetRir": {
      "max": 1,
      "min": 0,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Last set to failure. Drop weight if form breaks.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "tri1",
    "movementName": "rope-pushdown",
    "movementSlug": "rope-pushdown",
    "notes": "Adds direct triceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 3,
    "targetRir": {
      "max": 1,
      "min": 0,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "hsr2",
    "movementName": "tempo-calf",
    "movementSlug": "tempo-calf",
    "notes": "Adds direct calves volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 12,
    "sets": 3,
    "targetRir": {
      "max": 2,
      "min": 2,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > maintenance: week 0, dynamic picker 1`] = `
[
  {
    "intensityLabel": "26% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 26,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "32.5% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 32.5,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "39% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 39,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "60% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 60,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "65% TM",
    "isAmrap": false,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 5,
    "sets": 1,
  },
  {
    "distanceM": {
      "max": 20,
      "min": 20,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 20,
      "min": 20,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 13,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 13,
    "sets": 2,
    "targetRir": {
      "max": 4,
      "min": 4,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 13,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > rebuild: week 0, dynamic picker 1`] = `
[
  {
    "intensityLabel": "28% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 28,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "35% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 35,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "42% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 42,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "60% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 60,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "70% TM",
    "isAmrap": false,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 70,
    "reps": 5,
    "sets": 1,
  },
  {
    "distanceM": {
      "max": 20,
      "min": 15,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 30,
      "min": 30,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 14,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 14,
    "sets": 2,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 14,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Clean reps. Leave 1–2 in the tank.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "lr1",
    "movementName": "db-lateral-raise",
    "movementSlug": "db-lateral-raise",
    "notes": "Adds direct side delts volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 15,
    "sets": 2,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > strength_anchor: deload week, dynamic picker 1`] = `
[
  {
    "intensityLabel": "24% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 24,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "30% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 30,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "36% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 36,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "50% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 50,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "60% TM",
    "isAmrap": false,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 60,
    "reps": 5,
    "sets": 1,
  },
  {
    "distanceM": {
      "max": 20,
      "min": 20,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 24,
      "min": 12,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 10,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 10,
    "sets": 2,
    "targetRir": {
      "max": 4,
      "min": 4,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 10,
    "sets": 2,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Pick a weight you can finish cleanly. 2–3 in the tank on the last set.",
    "intensityLabel": "functional",
    "kind": "accessory",
    "movementId": "sl1",
    "movementName": "bulgarian-split-squat",
    "movementSlug": "bulgarian-split-squat",
    "notes": "Single-leg work to even out left-to-right strength and sharpen the balance two-leg lifts skip.",
    "reps": 8,
    "sets": 2,
    "targetRir": {
      "max": 5,
      "min": 4,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Clean reps. Leave 1–2 in the tank.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "bi1",
    "movementName": "db-curl",
    "movementSlug": "db-curl",
    "notes": "Adds direct biceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 12,
    "sets": 2,
    "targetRir": {
      "max": 4,
      "min": 4,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > strength_anchor: legacy static-pool fallback (no catalog/weekAccessoryHistory) 1`] = `
[
  {
    "intensityLabel": "34% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 34,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "42.5% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 42.5,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "51% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 51,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "75% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 75,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityCue": "As many clean reps as possible — stop ~1 in reserve, not to failure.",
    "intensityLabel": "85% TM",
    "isAmrap": true,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 85,
    "reps": 5,
    "sets": 1,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > strength_anchor: omitMainStrength (bodyweight / no-TM path) 1`] = `
[
  {
    "distanceM": {
      "max": 30,
      "min": 20,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 40,
      "min": 20,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 10,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 10,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 10,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Pick a weight you can finish cleanly. 2–3 in the tank on the last set.",
    "intensityLabel": "functional",
    "kind": "accessory",
    "movementId": "sl1",
    "movementName": "bulgarian-split-squat",
    "movementSlug": "bulgarian-split-squat",
    "notes": "Single-leg work to even out left-to-right strength and sharpen the balance two-leg lifts skip.",
    "reps": 8,
    "sets": 3,
    "targetRir": {
      "max": 4,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Clean reps. Leave 1–2 in the tank.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "bi1",
    "movementName": "db-curl",
    "movementSlug": "db-curl",
    "notes": "Adds direct biceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 12,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > strength_anchor: week 0, dynamic picker 1`] = `
[
  {
    "intensityLabel": "34% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 34,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "42.5% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 42.5,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "51% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 51,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "65% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 65,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "75% TM",
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 75,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityCue": "As many clean reps as possible — stop ~1 in reserve, not to failure.",
    "intensityLabel": "85% TM",
    "isAmrap": true,
    "kind": "main",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 85,
    "reps": 5,
    "sets": 1,
  },
  {
    "distanceM": {
      "max": 30,
      "min": 20,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 40,
      "min": 20,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 10,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 10,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 10,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Pick a weight you can finish cleanly. 2–3 in the tank on the last set.",
    "intensityLabel": "functional",
    "kind": "accessory",
    "movementId": "sl1",
    "movementName": "bulgarian-split-squat",
    "movementSlug": "bulgarian-split-squat",
    "notes": "Single-leg work to even out left-to-right strength and sharpen the balance two-leg lifts skip.",
    "reps": 8,
    "sets": 3,
    "targetRir": {
      "max": 4,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Clean reps. Leave 1–2 in the tank.",
    "intensityLabel": "aesthetic",
    "kind": "accessory",
    "movementId": "bi1",
    "movementName": "db-curl",
    "movementSlug": "db-curl",
    "notes": "Adds direct biceps volume — your main lift trains it only lightly, so this tops it up.",
    "reps": 12,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 3,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
]
`;

exports[`assemblePrescriptionItems — golden master > strength_anchor: week 2 (heavy peak), power emphasis on (clamp + PAP primer) 1`] = `
[
  {
    "intensityLabel": "Explosive primer",
    "kind": "power_potentiation",
    "meta": {
      "cue": "Maximum bar / body velocity. Stop a rep short of grind.",
      "pap": true,
      "restBeforeMainLift": "Rest 4–8 min before your main lift (PAPE window: Seitz & Haff 2016; Boullosa 2018).",
    },
    "movementId": "pwr1",
    "movementName": "box-jump",
    "movementSlug": "box-jump",
    "notes": "PAPE primer — 3 sets × 3–5 reps, full intent, full recovery between sets.",
    "reps": 5,
    "sets": 3,
  },
  {
    "intensityLabel": "36% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 36,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "45% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 45,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityLabel": "54% TM",
    "kind": "warmup",
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "percentTm": 54,
    "reps": 2,
    "sets": 1,
  },
  {
    "intensityLabel": "75% TM",
    "kind": "main",
    "meta": {
      "cue": "Compensatory acceleration — move every rep as fast as possible.",
      "powerEmphasis": true,
    },
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 75,
    "reps": 5,
    "sets": 1,
  },
  {
    "intensityLabel": "85% TM",
    "kind": "main",
    "meta": {
      "cue": "Compensatory acceleration — move every rep as fast as possible.",
      "powerEmphasis": true,
    },
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": undefined,
    "percentTm": 85,
    "reps": 3,
    "sets": 1,
  },
  {
    "intensityCue": "As many clean reps as possible — stop ~1 in reserve, not to failure.",
    "intensityLabel": "90% TM",
    "isAmrap": true,
    "kind": "main",
    "meta": {
      "cappedFromPercentTm": 95,
      "cue": "Compensatory acceleration — move every rep as fast as possible.",
      "powerEmphasis": true,
      "repsRewrittenFrom": 1,
    },
    "movementId": "mv-primary",
    "movementName": "Back Squat (High Bar)",
    "movementSlug": "back-squat-high-bar",
    "notes": "top set",
    "percentTm": 90,
    "reps": 3,
    "sets": 1,
  },
  {
    "distanceM": {
      "max": 40,
      "min": 30,
    },
    "holdSec": undefined,
    "intensityCue": "Brace hard. Walk heavy with controlled steps. Set the load down between trips.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "carry1",
    "movementName": "farmer-carry",
    "movementSlug": "farmer-carry",
    "notes": "A loaded carry to build grip and a braced trunk — strengths your barbell lifts lean on but rarely train head-on.",
    "reps": undefined,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": {
      "max": 40,
      "min": 20,
    },
    "intensityCue": "Hold steady. Stop when bracing breaks.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "iso1",
    "movementName": "wall-sit",
    "movementSlug": "wall-sit",
    "notes": "A hard static hold to build tendon and joint strength that your main lifts don't target directly.",
    "reps": 10,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "3-second lowering. Smooth and controlled — load adapts, not fatigue.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "hsr1",
    "movementName": "tempo-rdl",
    "movementSlug": "tempo-rdl",
    "notes": "Heavy, slow reps to make the tendon stronger and more resilient over time.",
    "reps": 10,
    "sets": 3,
    "targetRir": {
      "max": 2,
      "min": 2,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": 3,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "durability",
    "kind": "accessory",
    "movementId": "plyo1",
    "movementName": "pogo-hops",
    "movementSlug": "pogo-hops",
    "notes": "Low-impact jumps to keep your tendons springy and reactive.",
    "reps": 10,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Pick a weight you can finish cleanly. 2–3 in the tank on the last set.",
    "intensityLabel": "functional",
    "kind": "accessory",
    "movementId": "sl1",
    "movementName": "bulgarian-split-squat",
    "movementSlug": "bulgarian-split-squat",
    "notes": "Single-leg work to even out left-to-right strength and sharpen the balance two-leg lifts skip.",
    "reps": 8,
    "sets": 3,
    "targetRir": {
      "max": 3,
      "min": 2,
    },
    "targetRpe": undefined,
    "tempoEccentricSec": undefined,
  },
  {
    "distanceM": undefined,
    "holdSec": undefined,
    "intensityCue": "Maximum intent on every rep. Long rest between sets.",
    "intensityLabel": "power",
    "kind": "accessory",
    "movementId": "pwr1",
    "movementName": "box-jump",
    "movementSlug": "box-jump",
    "notes": "Power emphasis: explosive intent (3–5 reps, full recovery)",
    "reps": 5,
    "sets": 3,
    "targetRir": undefined,
    "targetRpe": {
      "max": 10,
      "min": 10,
    },
    "tempoEccentricSec": undefined,
  },
]
`;
